// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="display: inline-block; overflow-x: auto; contain: strict; width: 100px; height: 800px; background: red;"
    tabindex="0"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; inset-inline-start: 0px; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="display: block; overflow-y: auto; contain: strict; width: 100px; height: 800px; background: red;"
    tabindex="0"
  >
    <div
      style="contain: size style; overflow-anchor: none; flex: 0 0 auto; position: relative; width: 100%; height: 50px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
